<resources>
    <string name="app_name">Eclipse Expenses</string>
    <string name="name">Name</string>
    <string name="track_with_benj">Track With Benj</string>
    <string name="xp_tracker">XP Tracker</string>
    <string name="title">Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price">price</string>
    <string name="price2">Price</string>
    <string name="description">Description</string>
    <string name="add">ADD</string>
    <string name="total">TOTAL</string>
    <string name="_00_0">#00.0</string>
    <string name="_00_00">00.00   </string>
    <string name="app_logo">App Logo</string>
    <string name="_400_00">#400.00</string>
    <string name="budget">budget</string>    <string name="expense">expense</string>
    <string name="transactions">transactions</string>
    <string name="add_new_content">add new content</string>
    <string name="label">label</string>
    <string name="banana">banana</string>
    <string name="_300_00">#300.00</string>
    <string name="delete_all_transactions">delete all transactions.</string>
    <string name="backtomain">BackToMain</string>
    <string name="update_transactions">Update Transactions</string>
    <string name="incomecheck">Income</string>
    <string name="expensecheck">Expense</string>
    <string name="eclipse">eclipse</string>
    <string name="back_button">back_button</string>
    <string name="eclipse_expenses">Eclipse Expenses</string>
</resources>