<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:id="@+id/transactionlayout"
    android:focusable="true"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:background="?selectableItemBackground"
    android:clickable="true"
    android:padding="5dp"
    android:layout_marginBottom="3dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/visibletransdesign"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:textStyle="bold"
            android:id="@+id/label"
            android:layout_width="0dp"
            android:fontFamily="sans-serif"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:hint="@string/banana"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/label"
            android:textAllCaps="true"
            android:textColor="?attr/colorOnSurface"
            android:textSize="14sp"
            android:ellipsize="end"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:id="@+id/cost"
            android:textStyle="bold"
            android:text="@string/_300_00"
            android:hint="@string/_300_00"
            android:textSize="14sp"
            android:layout_marginEnd="12dp" />
    </LinearLayout>
</LinearLayout>