<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cordinator">
    <RelativeLayout
        android:background="@drawable/frontgradient"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/starter_main">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/dashboard"
            android:id="@+id/bigdashboard"
            android:elevation="8dp"
            android:outlineProvider="background"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/totallayout">
                <TextView
                    android:paddingStart="20dp"
                    android:id="@+id/total"
                    android:fontFamily="sans-serif-medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"

                    android:drawablePadding="10dp"
                    android:text="@string/total"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:textColor="@color/white_20"
                    app:drawableStartCompat="@drawable/eclipse"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/totalprice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_00_00"
                    android:fontFamily="sans-serif-medium"
                    android:background="@drawable/underline"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/white_25"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:padding="15dp"
                    android:inputType="numberDecimal"
                    tools:ignore="RtlSymmetry,TextViewEdits" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dashboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:elevation="4dp"
                android:outlineProvider="background"
                android:background="@drawable/dashboards"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/budgetLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/budgetValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_400_00"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/green2"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/budget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:text="@string/budget"
                        android:fontFamily="sans-serif-medium"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="11sp" />
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:background="#33444444"
                    android:layout_gravity="center"/>
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1" />
                <View
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:background="#33444444"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:id="@+id/expenselayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/expenseValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_400_00"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/red2"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/expense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expense"
                        android:fontFamily="sans-serif-medium"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="11sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/transactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bigdashboard"
            android:textAlignment="center"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:text="@string/transactions"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:textSize="12sp"
            android:textStyle="bold" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_below="@id/transactions"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="2dp"
            android:id="@+id/scroll"
            android:background="@drawable/clearbackground"
            android:padding="5dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="16dp"
            android:fillViewport="true">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recycleview"
                android:padding="5dp"
                app:cardElevation="4dp"
                android:nestedScrollingEnabled="false"
                android:layoutAnimation="@anim/layout_slide_in"
                app:cardCornerRadius="16dp"/>
        </androidx.core.widget.NestedScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:padding="2dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:id="@+id/floatingbuttonlayout">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add_new_content"
                android:src="@drawable/add"
                android:id="@+id/AddTransaction"
                app:backgroundTint="@color/dark_surface"
                app:tint="@color/white" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/clear_transaction_record"
                android:contentDescription="@string/delete_all_transactions"
                android:src="@drawable/trash"
                app:backgroundTint="@color/dark_surface"
                app:tint="@color/white" />
        </LinearLayout>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
